es6中class定义的构造函数无法直接调用，否则会报错

--- a/src/demo/views/pages/ui.html
+++ b/src/demo/views/pages/ui.html
@@ -57,7 +57,7 @@
                         <div class="g-form-body-content">
                             <div class="g-form-body-content-symbol g-iconfont g-icon-rmb"></div>
                             <div class="g-form-body-content-main">
-                                <input placeholder="请输入" class="g-input js-validate-form" data-validate="no-empty no-zero yes-positive-integer" data-hint="本项必填 本项不可为零 请输入正整数" type="text">
+                                <input placeholder="请输入" class="g-input js-validate" data-validate="no-empty no-zero yes-positive-integer" data-hint="本项必填 本项不可为零 请输入正整数" type="text">
                             </div>
                             <div class="g-form-body-content-icon g-iconfont g-icon-clear"></div>
                             <div class="g-form-body-content-icon g-form-body-content-hint g-iconfont g-icon-required"></div>
@@ -70,7 +70,7 @@
                         <div class="g-form-body-content">
                             <div class="g-form-body-content-symbol g-iconfont g-icon-search"></div>
                             <div class="g-form-body-content-main">
-                                <input class="g-input js-validate-form" data-validate="no-empty no-zero yes-positive-integer" data-hint="本项必填 本项不可为零 请输入正整数" type="text" name="website-search" value="" placeholder="请输入搜索内容">
+                                <input class="g-input js-validate" data-validate="no-empty no-zero yes-positive-integer" data-hint="本项必填 本项不可为零 请输入正整数" type="text" name="website-search" value="" placeholder="请输入搜索内容">
                             </div>
                             <div class="g-form-body-content-icon g-iconfont g-icon-clear"></div>
                             <div class="g-form-body-content-icon g-form-body-content-hint g-iconfont g-icon-required"></div>
@@ -83,7 +83,7 @@
                         <div class="g-form-body-content">
                             <div class="g-form-body-content-symbol g-iconfont g-icon-tel"></div>
                             <div class="g-form-body-content-main">
-                                <input class="g-input js-validate-form js-g-positive-integer" data-validate="no-empty no-zero yes-positive-integer yes-phone" data-hint="本项必填 本项不可为零 请输入正整数 手机号码格式错误" type="tel" name="website-phone" value="" placeholder="请输入手机号码">
+                                <input class="g-input js-validate js-g-positive-integer" data-validate="no-empty no-zero yes-positive-integer yes-phone" data-hint="本项必填 本项不可为零 请输入正整数 手机号码格式错误" type="tel" name="website-phone" value="" placeholder="请输入手机号码">
                             </div>
                             <div class="g-form-body-content-icon g-iconfont g-icon-clear"></div>
                             <div class="g-form-body-content-icon g-form-body-content-hint g-iconfont g-icon-required"></div>
@@ -97,21 +97,21 @@
                             <div class="g-form-body-content-main g-form-body-content-main_more-row">
                                 <label class="g-radio">
                                             <span class="g-radio-body">
-                                                <input title="" class="g-radio-body-main js-validate-form" data-event="change" data-validate="no-empty" data-hint="本项必选" type="radio" name="sex" value="male">
+                                                <input title="" class="g-radio-body-main js-validate" data-event="change" data-validate="no-empty" data-hint="本项必选" type="radio" name="sex" value="male">
                                                 <span class="g-radio-body-mark g-iconfont g-icon-radio"></span>
                                             </span>
                                     <span class="g-radio-text">男</span>
                                 </label>
                                 <label class="g-radio">
                                             <span class="g-radio-body">
-                                                <input title="" class="g-radio-body-main js-validate-form" data-event="change" data-validate="no-empty" data-hint="本项必选" type="radio" name="sex" value="female">
+                                                <input title="" class="g-radio-body-main js-validate" data-event="change" data-validate="no-empty" data-hint="本项必选" type="radio" name="sex" value="female">
                                                 <span class="g-radio-body-mark g-iconfont g-icon-radio"></span>
                                             </span>
                                     <span class="g-radio-text">女</span>
                                 </label>
                                 <label class="g-radio">
                                             <span class="g-radio-body">
-                                                <input disabled="disabled" title="" class="g-radio-body-main js-validate-form" data-event="change" data-validate="no-empty" data-hint="本项必选" type="radio" name="sex" value="female">
+                                                <input disabled="disabled" title="" class="g-radio-body-main js-validate" data-event="change" data-validate="no-empty" data-hint="本项必选" type="radio" name="sex" value="female">
                                                 <span class="g-radio-body-mark g-iconfont g-icon-radio"></span>
                                             </span>
                                     <span class="g-radio-text">不男不女</span>
@@ -128,35 +128,35 @@
                             <div class="g-form-body-content-main g-form-body-content-main_more-row">
                                 <label class="g-checkbox">
                                             <span class="g-checkbox-body">
-                                                <input checked="checked" title="" class="g-checkbox-body-main js-validate-form" data-event="change" data-validate="no-empty yes-limit-length-2" data-hint="本项必选 仅能选择2个" type="checkbox" name="hobby[]" value="pingpangqiu">
+                                                <input checked="checked" title="" class="g-checkbox-body-main js-validate" data-event="change" data-validate="no-empty yes-limit-length-2" data-hint="本项必选 仅能选择2个" type="checkbox" name="hobby[]" value="pingpangqiu">
                                                 <span class="g-checkbox-body-mark g-iconfont g-icon-checkbox"></span>
                                             </span>
                                     <span class="g-checkbox-text">金</span>
                                 </label>
                                 <label class="g-checkbox">
                                             <span class="g-checkbox-body">
-                                                <input checked="checked" title="" class="g-checkbox-body-main js-validate-form" data-event="change" data-validate="no-empty yes-limit-length-2" data-hint="本项必选 仅能选择2个" type="checkbox" name="hobby[]" value="lanqiu">
+                                                <input checked="checked" title="" class="g-checkbox-body-main js-validate" data-event="change" data-validate="no-empty yes-limit-length-2" data-hint="本项必选 仅能选择2个" type="checkbox" name="hobby[]" value="lanqiu">
                                                 <span class="g-checkbox-body-mark g-iconfont g-icon-checkbox"></span>
                                             </span>
                                     <span class="g-checkbox-text">木</span>
                                 </label>
                                 <label class="g-checkbox">
                                             <span class="g-checkbox-body">
-                                                <input checked="checked" title="" class="g-checkbox-body-main js-validate-form" data-event="change" data-validate="no-empty yes-limit-length-2" data-hint="本项必选 仅能选择2个" type="checkbox" name="hobby[]" value="zuqiu">
+                                                <input checked="checked" title="" class="g-checkbox-body-main js-validate" data-event="change" data-validate="no-empty yes-limit-length-2" data-hint="本项必选 仅能选择2个" type="checkbox" name="hobby[]" value="zuqiu">
                                                 <span class="g-checkbox-body-mark g-iconfont g-icon-checkbox"></span>
                                             </span>
                                     <span class="g-checkbox-text">水</span>
                                 </label>
                                 <label class="g-checkbox">
                                             <span class="g-checkbox-body">
-                                                <input title="" class="g-checkbox-body-main js-validate-form" data-event="change" data-validate="no-empty yes-limit-length-2" data-hint="本项必选 仅能选择2个" type="checkbox" name="hobby[]" value="zuqiu">
+                                                <input title="" class="g-checkbox-body-main js-validate" data-event="change" data-validate="no-empty yes-limit-length-2" data-hint="本项必选 仅能选择2个" type="checkbox" name="hobby[]" value="zuqiu">
                                                 <span class="g-checkbox-body-mark g-iconfont g-icon-checkbox"></span>
                                             </span>
                                     <span class="g-checkbox-text">火</span>
                                 </label>
                                 <label class="g-checkbox">
                                             <span class="g-checkbox-body">
-                                                <input disabled="disabled" title="" class="g-checkbox-body-main js-validate-form" data-event="change" data-validate="no-empty yes-limit-length-2" data-hint="本项必选 仅能选择2个" type="checkbox" name="hobby[]" value="zuqiu">
+                                                <input disabled="disabled" title="" class="g-checkbox-body-main js-validate" data-event="change" data-validate="no-empty yes-limit-length-2" data-hint="本项必选 仅能选择2个" type="checkbox" name="hobby[]" value="zuqiu">
                                                 <span class="g-checkbox-body-mark g-iconfont g-icon-checkbox"></span>
                                             </span>
                                     <span class="g-checkbox-text">土</span>
@@ -172,7 +172,7 @@
                         <div class="g-form-body-content">
                             <div class="g-form-body-content-main">
                                     <span class="g-select">
-                                        <select class="g-select-body js-validate-form" data-event="change" data-validate="no-empty" data-hint="本项必选" name="" title="请选择你喜欢的球类">
+                                        <select class="g-select-body js-validate" data-event="change" data-validate="no-empty" data-hint="本项必选" name="" title="请选择你喜欢的球类">
                                             <option value="">请选择你喜欢的球类</option>
                                             <option value="1">乒乓球</option>
                                             <option value="2">篮球</option>
@@ -210,7 +210,7 @@
                                             </span>
                                 </label>
                                 <label class="g-upload js-popover">
-                                    <input class="g-upload-input js-validate-form js-upload-input" data-event="change" data-validate="no-empty yes-limit-length-1" data-hint="本项必传 最多上传1张图片" data-value="true" accept="image/gif, image/jpeg, image/png" type="file">
+                                    <input class="g-upload-input js-validate js-upload-input" data-event="change" data-validate="no-empty yes-limit-length-1" data-hint="本项必传 最多上传1张图片" data-value="true" accept="image/gif, image/jpeg, image/png" type="file">
                                     <input type="hidden" name="">
                                     <span class="g-upload-icon g-iconfont g-icon-upload-img"></span>
                                     <span class="g-upload-show"></span>
@@ -252,7 +252,7 @@
                         <div class="g-form-body-text">留言:</div>
                         <div class="g-form-body-content">
                             <div class="g-form-body-content-main">
-                                <textarea class="g-textarea js-validate-form" data-validate="no-empty no-zero yes-positive-integer no-999" data-hint="本项必填 本项不可为零 请输入正整数 不允许是999" placeholder="请输入">999</textarea>
+                                <textarea class="g-textarea js-validate" data-validate="no-empty no-zero yes-positive-integer no-999" data-hint="本项必填 本项不可为零 请输入正整数 不允许是999" placeholder="请输入">999</textarea>
                             </div>
                             <div class="g-form-body-content-limit">0/100</div>
                             <div class="g-form-body-content-icon g-iconfont g-icon-clear"></div>
