--- a/demo/src/views/pages/ui.html
+++ b/demo/src/views/pages/ui.html
@@ -4,7 +4,7 @@
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
         <meta http-equiv="X-UA-Compatible" content="ie=edge">
-        <title>Document</title>
+        <title>demo</title>
         <script>
             /* rem自适应 */
             (function () {
@@ -358,5 +358,6 @@
             <div class="g-title">功能组件 - 进度条</div>
             <div class="progress-bar"></div>
         </form>
+        <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
     </body>
 </html>
