自定义规则处理成可以监听未来元素

--- a/src/scss/commons/g-common.scss
+++ b/src/scss/commons/g-common.scss
@@ -10,11 +10,11 @@
 @import "../components/g-upload";
 @import "../components/g-button";
 @import "../components/g-table";
-@import "../components/g-list-wrap";
+@import "../components/g-list";
 @import "../components/g-loading";
 @import "../components/g-mask";
 @import "../components/g-message";
-@import "../components/g-confirm-wrap";
+@import "../components/g-confirm";
 @import "../components/g-tooltip";
 @import "../components/g-popover";
 @import "../components/g-jump-link";
@@ -29,7 +29,7 @@
 @import "../components/g-footer-nav";
 @import "../components/g-quick-enter";
 @import "../components/g-audio";
-@import "../components/g-form-wrap";
+@import "../components/g-form";
 @import "../components/g-verify-code-canvas";
 @import "../components/g-jump-guide";
 @import "../components/g-row";
