--- a/src/scss/components/g-message.scss
+++ b/src/scss/components/g-message.scss
@@ -8,7 +8,7 @@
     display: flex;
     align-items: center;
     justify-content: center;
-    width: px2rem(260*1.5);
+    width: px2rem($g-message_width);
     padding: px2rem(10) px2rem(20);
     border-radius: px2rem(6);
     box-sizing: border-box;
