--- a/demo/src/views/pages/ui.html
+++ b/demo/src/views/pages/ui.html
@@ -359,5 +359,6 @@
             <div class="progress-bar"></div>
         </form>
         <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
+        <script src="https://cdnjs.cloudflare.com/ajax/libs/vue/2.5.16/vue.min.js"></script>
     </body>
 </html>
