--- a/src/scss/fonts/g-iconfont.scss
+++ b/src/scss/fonts/g-iconfont.scss
@@ -1,5 +1,5 @@
 @font-face {
-    font-family: 'iconfont';  /* project id 814235 */
+    font-family: 'g-iconfont';
     src: url('//at.alicdn.com/t/font_814235_wq6jymlkemb.eot');
     src: url('//at.alicdn.com/t/font_814235_wq6jymlkemb.eot?#iefix') format('embedded-opentype'),
     url('//at.alicdn.com/t/font_814235_wq6jymlkemb.woff') format('woff'),
@@ -8,7 +8,7 @@
 }
 
 .g-iconfont {
-    font-family: "iconfont" !important;
+    font-family: "g-iconfont" !important;
     font-style: normal;
     -webkit-font-smoothing: antialiased;
     -moz-osx-font-smoothing: grayscale;
