--- a/demo/src/scss/pages/ui/index.scss
+++ b/demo/src/scss/pages/ui/index.scss
@@ -11,4 +11,4 @@ body {
 */
 
 // 样式全部引入
-@import "../../../../src/scss/commons/g-common"; // 组件，所有的组件集合。
+@import "../../../../../src/scss/commons/g-common"; // 组件，所有的组件集合。
