--- a/demo/src/views/pages/ui/index.html
+++ b/demo/src/views/pages/ui/index.html
@@ -357,6 +357,8 @@
             <div class="sort-tab"></div>
             <div class="g-title">功能组件 - 进度条</div>
             <div class="progress-bar"></div>
+            <!-- vue组件 -->
+            <div id="app"></div>
         </form>
         <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
         <script src="https://cdnjs.cloudflare.com/ajax/libs/vue/2.5.16/vue.min.js"></script>
