--- a/src/scss/components/g-no-data.scss
+++ b/src/scss/components/g-no-data.scss
@@ -23,6 +23,8 @@
         margin-bottom: px2rem(20);
     }
     .g-no-data-button {
+        @extend .g-reset_a;
         width: 50%;
+        color: #ffffff;
     }
 }
