--- a/demo/src/views/pages/ui/index.html
+++ b/demo/src/views/pages/ui/index.html
@@ -346,17 +346,25 @@
                 <div class="g-pagination-btn">尾页</div>
             </div>
             <div class="g-title">功能组件 - 弹窗系列</div>
-            <div class="g-display_flex g-align-items_center">
-                <div class="g-button g-button_small g-margin-right_10">g-alert</div>
-                <div class="g-button g-button_small g-margin-right_10">g-confirm</div>
-                <div class="g-button g-button_small g-margin-right_10">g-message</div>
-                <div class="g-button g-button_small g-margin-right_10">g-popover</div>
-                <div class="g-button g-button_small g-margin-right_10">g-tooltip</div>
+            <div class="g-display_flex g-align-items_center" style="flex-wrap: wrap">
+                <div class="g-button g-button_small g-margin_5">g-alert</div>
+                <div class="g-button g-button_small g-margin_5">g-confirm</div>
+                <div class="g-button g-button_small g-margin_5">g-message</div>
+                <div class="g-button g-button_small g-margin_5">g-popover</div>
+                <div class="g-button g-button_small g-margin_5">g-tooltip</div>
+                <div class="g-button g-button_small g-margin_5 js-loading_show">g-loading show</div>
+                <div class="g-button g-button_small g-margin_5 js-loading_hide">g-loading hide</div>
             </div>
             <div class="g-title">功能组件 - 排序切换</div>
             <div class="sort-tab"></div>
             <div class="g-title">功能组件 - 进度条</div>
-            <div class="progress-bar"></div>
+            <div class="progress-bar g-display_flex g-align-items_center g-justify-content_center"></div>
+            <div class="g-title">功能组件 - 没有数据</div>
+            <div class="no-data"></div>
+            <div class="g-title">功能组件 - 数据加载中</div>
+            <div class="loading-run"></div>
+            <div class="g-title">功能组件 - 数据加载完毕</div>
+            <div class="loading-over"></div>
             <!-- vue组件 -->
             <div id="app"></div>
         </form>
