--- a/demo/src/views/pages/ui/index.html
+++ b/demo/src/views/pages/ui/index.html
@@ -352,8 +352,8 @@
                 <div class="g-button g-button_small g-margin_5">g-message</div>
                 <div class="g-button g-button_small g-margin_5">g-popover</div>
                 <div class="g-button g-button_small g-margin_5">g-tooltip</div>
-                <div class="g-button g-button_small g-margin_5 js-loading_show">g-loading show</div>
-                <div class="g-button g-button_small g-margin_5 js-loading_hide">g-loading hide</div>
+                <div class="g-button g-button_small g-margin_5 js-loading-dialog_show">g-loading-dialog show</div>
+                <div class="g-button g-button_small g-margin_5 js-loading-dialog_hide">g-loading-dialog hide</div>
             </div>
             <div class="g-title">功能组件 - 排序切换</div>
             <div class="sort-tab"></div>
@@ -361,8 +361,12 @@
             <div class="progress-bar g-display_flex g-align-items_center g-justify-content_center"></div>
             <div class="g-title">功能组件 - 没有数据</div>
             <div class="no-data"></div>
-            <div class="g-title">功能组件 - 数据加载中</div>
-            <div class="loading-run"></div>
+            <div class="g-title">功能组件 - 数据加载中(样式：normal)</div>
+            <div class="loading-normal"></div>
+            <div class="g-title">功能组件 - 数据加载中(样式：highlight)</div>
+            <div class="loading-highlight"></div>
+            <div class="g-title">功能组件 - 数据加载中(样式：dark)</div>
+            <div class="loading-dark"></div>
             <div class="g-title">功能组件 - 数据加载完毕</div>
             <div class="loading-over"></div>
             <!-- vue组件 -->
