--- a/demo/src/views/pages/ui/index.html
+++ b/demo/src/views/pages/ui/index.html
@@ -327,24 +327,7 @@
                 </div>
             </div>
             <div class="g-title">功能组件 - 分页系列</div>
-            <div class="g-pagination">
-                <div class="g-pagination-btn g-pagination-btn-inactive">首页</div>
-                <div class="g-pagination-btn g-pagination-btn-inactive">上一页</div>
-                <div class="g-pagination-text">第</div>
-                <div class="g-pagination-now-page">
-                    <label class="g-select">
-                        <select class="g-select-body">
-                            <option value="1">1</option>
-                            <option value="2">2</option>
-                            <option value="3">3</option>
-                        </select>
-                        <span class="g-select-mark g-iconfont g-icon-select"></span>
-                    </label>
-                </div>
-                <div class="g-pagination-text">页</div>
-                <div class="g-pagination-btn">下一页</div>
-                <div class="g-pagination-btn">尾页</div>
-            </div>
+            <div class="pagination"></div>
             <div class="g-title">功能组件 - 弹窗系列</div>
             <div class="g-display_flex g-align-items_center" style="flex-wrap: wrap">
                 <div class="g-button g-button_small g-margin_5">g-alert</div>
