--- a/src/scss/components/g-pagination.scss
+++ b/src/scss/components/g-pagination.scss
@@ -3,7 +3,6 @@
 .g-pagination {
     @extend .g-reset_font;
     $height: 24;
-    padding: px2rem(10) 0;
     height: px2rem($height);
     display: flex;
     align-items: center;
@@ -18,6 +17,7 @@
         }
     }
     .g-pagination-btn {
+        @extend .g-reset_a;
         display: flex;
         align-items: center;
         justify-content: center;
