--- a/demo/src/views/pages/ui/index.html
+++ b/demo/src/views/pages/ui/index.html
@@ -326,8 +326,10 @@
                     <div class="g-button-text">保存</div>
                 </div>
             </div>
-            <div class="g-title">功能组件 - 分页系列</div>
+            <div class="g-title">功能组件 - 分页</div>
             <div class="pagination"></div>
+            <div class="g-title">功能组件 - 表格</div>
+            <div class="table"></div>
             <div class="g-title">功能组件 - 弹窗系列</div>
             <div class="g-display_flex g-align-items_center" style="flex-wrap: wrap">
                 <div class="g-button g-button_small g-margin_5">g-alert</div>
@@ -347,9 +349,9 @@
             <div class="g-title">功能组件 - 数据加载中(样式：normal)</div>
             <div class="loading-normal"></div>
             <div class="g-title">功能组件 - 数据加载中(样式：highlight)</div>
-            <div class="loading-highlight" style="height: 2rem;">白色背景覆盖父级</div>
+            <div class="loading-highlight" style="height: 2rem;font-size: 1rem;line-height: 2rem;text-align: center;">白色背景覆盖父级</div>
             <div class="g-title">功能组件 - 数据加载中(样式：dark)</div>
-            <div class="loading-dark" style="height: 2rem;">黑色背景覆盖父级</div>
+            <div class="loading-dark" style="height: 2rem;font-size: 1rem;line-height: 2rem;text-align: center;">黑色背景覆盖父级</div>
             <div class="g-title">功能组件 - 数据加载完毕</div>
             <div class="loading-over"></div>
             <!-- vue组件 -->
