--- a/demo/src/views/pages/ui/index.html
+++ b/demo/src/views/pages/ui/index.html
@@ -326,10 +326,6 @@
                     <div class="g-button-text">保存</div>
                 </div>
             </div>
-            <div class="g-title">功能组件 - 分页</div>
-            <div class="pagination"></div>
-            <div class="g-title">功能组件 - 表格</div>
-            <div class="table"></div>
             <div class="g-title">功能组件 - 弹窗系列</div>
             <div class="g-display_flex g-align-items_center" style="flex-wrap: wrap">
                 <div class="g-button g-button_small g-margin_5">g-alert</div>
@@ -340,6 +336,12 @@
                 <div class="g-button g-button_small g-margin_5 js-loading-dialog_show">g-loading-dialog show</div>
                 <div class="g-button g-button_small g-margin_5 js-loading-dialog_hide">g-loading-dialog hide</div>
             </div>
+            <div class="g-title">功能组件 - 分页</div>
+            <div class="pagination"></div>
+            <div class="g-title">功能组件 - 表格</div>
+            <div class="table"></div>
+            <div class="g-title">功能组件 - 单选切换</div>
+            <div class="radio-switch"></div>
             <div class="g-title">功能组件 - 排序切换</div>
             <div class="sort-tab"></div>
             <div class="g-title">功能组件 - 进度条</div>
