--- a/demo/src/views/pages/ui/index.html
+++ b/demo/src/views/pages/ui/index.html
@@ -348,18 +348,15 @@
             <div class="progress-bar g-display_flex g-align-items_center g-justify-content_center"></div>
             <div class="g-title">功能组件 - 没有数据</div>
             <div class="no-data"></div>
-            <div class="g-title">功能组件 - 数据加载中(样式：normal)</div>
+            <div class="g-title">功能组件 - 数据加载中</div>
             <div class="loading-normal"></div>
-            <div class="g-title">功能组件 - 数据加载中(样式：highlight)</div>
-            <div class="loading-highlight" style="height: 2rem;font-size: 1rem;line-height: 2rem;text-align: center;">白色背景覆盖父级</div>
-            <div class="g-title">功能组件 - 数据加载中(样式：dark)</div>
-            <div class="loading-dark" style="height: 2rem;font-size: 1rem;line-height: 2rem;text-align: center;">黑色背景覆盖父级</div>
             <div class="g-title">功能组件 - 数据加载完毕</div>
             <div class="loading-over"></div>
             <!-- vue组件 -->
             <div id="app"></div>
         </form>
         <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
-        <script src="https://cdnjs.cloudflare.com/ajax/libs/vue/2.5.16/vue.min.js"></script>
+        <script src="https://cdnjs.cloudflare.com/ajax/libs/vue/2.5.16/vue.js"></script><!-- 开发版本 -->
+        <!--<script src="https://cdnjs.cloudflare.com/ajax/libs/vue/2.5.16/vue.min.js"></script>--><!-- 生产版本，不能被浏览器上的Vue Devtools工具调试 -->
     </body>
 </html>
