--- a/src/scss/commons/g-common.scss
+++ b/src/scss/commons/g-common.scss
@@ -33,6 +33,7 @@
 @import "../components/g-audio";
 @import "../components/g-form";
 @import "../components/g-verify-code-canvas";
+@import "../components/g-verify-code-random";
 @import "../components/g-jump-guide";
 @import "../components/g-row";
 @import "../components/g-title";
