--- a/src/scss/components/g-verify-code-canvas.scss
+++ b/src/scss/components/g-verify-code-canvas.scss
@@ -5,6 +5,7 @@
     @extend .g-reset_font;
     width: px2rem(160);
     height: px2rem(40);
+    cursor: pointer;
     img {
         width: 100%;
         height: 100%;
