--- a/demo/src/views/pages/ui/index.html
+++ b/demo/src/views/pages/ui/index.html
@@ -26,7 +26,7 @@
                     <div class="g-list-body">
                         <div class="g-list-body">
                             <div class="g-list-body-logo g-iconfont g-icon-no-data"></div>
-                            <div class="g-list-body-text">首页</div>
+                            <div class="g-list-body-key">首页</div>
                         </div>
                         <div class="g-list-body">
                             <div class="g-list-body-value">有新的消息</div>
@@ -39,7 +39,7 @@
                     <div class="g-list-body">
                         <div class="g-list-body">
                             <div class="g-list-body-logo g-iconfont g-icon-no-data"></div>
-                            <div class="g-list-body-text">网站信息</div>
+                            <div class="g-list-body-key">网站信息</div>
                         </div>
                         <div class="g-list-body">
                             <div class="g-list-body-value">99</div>
