--- a/src/scss/components/g-list.scss
+++ b/src/scss/components/g-list.scss
@@ -18,46 +18,53 @@
             }
         }
     }
-    .g-list {
-        @extend .g-reset_a;
-        display: block;
-        padding: px2rem(10) px2rem(10);
-        margin-bottom: px2rem(10);
-        background: #fff;
-        overflow: hidden;
-        .g-list-body {
-            display: flex;
-            align-items: center;
-            justify-content: space-between;
-            .g-list-body-logo {
-                $size: 24;
-                width: px2rem($size);
-                height: px2rem($size);
-                font-size: px2rem($size);
-                margin-right: px2rem(10);
-                color: $g-color_highlight;
-            }
-            .g-list-body-text {
-                font-size: px2rem(12);
-            }
-            .g-list-body-value {
-                font-size: px2rem(12);
-                color: $g-color_ignore;
-            }
-            .g-list-body-icon {
-                $size: 14;
-                font-size: px2rem($size);
-                min-width: px2rem($size);
-            }
-        }
-        .g-list-footer {
-            font-size: px2rem(12);
-            line-height: 1.3;
-            color: $g-color_ignore;
-            text-align: justify;
-        }
-        &:last-child {
-            margin-bottom: 0;
-        }
+}
+
+.g-list {
+    @extend .g-reset_a;
+    display: block;
+    padding: px2rem(10) px2rem(10);
+    margin-bottom: px2rem(10);
+    background: #fff;
+    overflow: hidden;
+    &:last-child {
+        margin-bottom: 0;
     }
+}
+
+.g-list-body {
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+}
+
+.g-list-body-logo {
+    $size: 24;
+    width: px2rem($size);
+    height: px2rem($size);
+    font-size: px2rem($size);
+    margin-right: px2rem(10);
+    color: $g-color_highlight;
+}
+
+.g-list-body-key {
+    font-size: px2rem(12);
+}
+
+.g-list-body-value {
+    font-size: px2rem(12);
+    color: $g-color_ignore;
+}
+
+.g-list-body-icon {
+    $size: 14;
+    font-size: px2rem($size);
+    min-width: px2rem($size);
+}
+
+.g-list-footer {
+    font-size: px2rem(12);
+    line-height: 1.3;
+    color: $g-color_ignore;
+    text-align: justify;
 }
